# redis-sub-persistence

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  redis-sub-persistence.service
.github/workflows/: ci.yml
docs/: START.md
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  signal.rs  subscriber.rs
src/persistence/: database.rs  file.rs  mod.rs
tests/: integration.rs
